--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,101 +26,89 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>row</th>\n",
-       "      <th>col</th>\n",
-       "      <th>data</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>item_list</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>3568</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0 1 2 3 4 5 6 7 8 9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3827</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0 1 2 3 4 5 6 7 8 9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4844</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0 1 2 3 4 5 6 7 8 9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5734</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0 1 2 3 4 5 6 7 8 9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6518</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0 1 2 3 4 5 6 7 8 9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>398631</td>\n",
-       "      <td>30910</td>\n",
-       "      <td>18176</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>28101</td>\n",
+       "      <td>30906</td>\n",
+       "      <td>0 1 2 3 4 5 6 7 8 9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>398632</td>\n",
-       "      <td>30910</td>\n",
-       "      <td>18185</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>28102</td>\n",
+       "      <td>30907</td>\n",
+       "      <td>0 1 2 3 4 5 6 7 8 9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>398633</td>\n",
-       "      <td>30910</td>\n",
-       "      <td>18248</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>28103</td>\n",
+       "      <td>30908</td>\n",
+       "      <td>0 1 2 3 4 5 6 7 8 9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>398634</td>\n",
-       "      <td>30910</td>\n",
-       "      <td>18349</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>28104</td>\n",
+       "      <td>30909</td>\n",
+       "      <td>0 1 2 3 4 5 6 7 8 9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>398635</td>\n",
+       "      <td>28105</td>\n",
        "      <td>30910</td>\n",
-       "      <td>18360</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0 1 2 3 4 5 6 7 8 9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>398636 rows × 3 columns</p>\n",
+       "<p>28106 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          row    col  data\n",
-       "0           0   3568   1.0\n",
-       "1           0   3827   1.0\n",
-       "2           0   4844   1.0\n",
-       "3           0   5734   1.0\n",
-       "4           0   6518   1.0\n",
-       "...       ...    ...   ...\n",
-       "398631  30910  18176   1.0\n",
-       "398632  30910  18185   1.0\n",
-       "398633  30910  18248   1.0\n",
-       "398634  30910  18349   1.0\n",
-       "398635  30910  18360   1.0\n",
+       "       user_id            item_list\n",
+       "0            0  0 1 2 3 4 5 6 7 8 9\n",
+       "1            1  0 1 2 3 4 5 6 7 8 9\n",
+       "2            2  0 1 2 3 4 5 6 7 8 9\n",
+       "3            4  0 1 2 3 4 5 6 7 8 9\n",
+       "4            5  0 1 2 3 4 5 6 7 8 9\n",
+       "...        ...                  ...\n",
+       "28101    30906  0 1 2 3 4 5 6 7 8 9\n",
+       "28102    30907  0 1 2 3 4 5 6 7 8 9\n",
+       "28103    30908  0 1 2 3 4 5 6 7 8 9\n",
+       "28104    30909  0 1 2 3 4 5 6 7 8 9\n",
+       "28105    30910  0 1 2 3 4 5 6 7 8 9\n",
        "\n",
-       "[398636 rows x 3 columns]"
+       "[28106 rows x 2 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,24 +119,39 @@
     "import scipy.sparse as sps\n",
     "\n",
     "filePath = \"./data/data_train.csv\"\n",
+    "targetFile = \"./data/alg_sample_submission.csv\"\n",
     "df = pd.read_csv(filePath)\n",
-    "df"
+    "target_df = pd.read_csv(targetFile)\n",
+    "target_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28106"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ratingList = list(df['data'])\n",
     "userList = list(df['row'])\n",
-    "itemList = list(df['col'])"
+    "itemList = list(df['col'])\n",
+    "targetList = list(target_df['user_id'])\n",
+    "len(targetList)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +161,7 @@
        "\twith 398636 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,52 +174,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<30911x15277 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 398636 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "warm_items_mask = np.ediff1d(URM_all.tocsc().indptr) > 0\n",
-    "warm_items = np.arange(URM_all.shape[1])[warm_items_mask]\n",
+    "#warm_items_mask = np.ediff1d(URM_all.tocsc().indptr) > 0\n",
+    "#warm_items = np.arange(URM_all.shape[1])[warm_items_mask]\n",
     "\n",
-    "URM_all = URM_all[:, warm_items]\n",
-    "URM_all"
+    "#URM_all = URM_all[:, warm_items]\n",
+    "#URM_all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<27255x15277 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 398636 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "warm_users_mask = np.ediff1d(URM_all.tocsr().indptr) > 0\n",
-    "warm_users = np.arange(URM_all.shape[0])[warm_users_mask]\n",
+    "#warm_users_mask = np.ediff1d(URM_all.tocsr().indptr) > 0\n",
+    "#warm_users = np.arange(URM_all.shape[0])[warm_users_mask]\n",
     "\n",
-    "URM_all = URM_all[warm_users, :]\n",
-    "URM_all"
+    "#URM_all = URM_all[warm_users, :]\n",
+    "#URM_all"
    ]
   },
   {
@@ -228,7 +207,7 @@
      "data": {
       "text/plain": [
        "<30911x18495 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 279464 stored elements in Compressed Sparse Row format>"
+       "\twith 319079 stored elements in Compressed Sparse Row format>"
       ]
      },
      "execution_count": 6,
@@ -239,7 +218,7 @@
    "source": [
     "from Algorithms.Notebooks_utils.data_splitter import train_test_holdout\n",
     "\n",
-    "URM_train, URM_test = train_test_holdout(URM_all, train_perc = 0.7)\n",
+    "URM_train, URM_test = train_test_holdout(URM_all, train_perc = 0.8)\n",
     "URM_train"
    ]
   },
@@ -253,14 +232,14 @@
      "output_type": "stream",
      "text": [
       "UserBasedCF created!\n",
-      "Similarity column 30911 ( 100 % ), 1871.97 column/sec, elapsed time 0.28 min\n"
+      "Similarity column 30911 ( 100 % ), 1774.36 column/sec, elapsed time 0.29 min\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([ 5300,  4169,  6447, 14145,  7246, 11941,  4420, 11783,  9475,\n",
-       "        3601])"
+       "array([ 3611,  6289,  6956,  4410,  8635,  3569,  8668, 15101, 13297,\n",
+       "       16360])"
       ]
      },
      "execution_count": 7,
@@ -290,40 +269,12 @@
      "output_type": "stream",
      "text": [
       "UserBasedCF created!\n",
-      "Similarity column 30911 ( 100 % ), 1865.60 column/sec, elapsed time 0.28 min\n",
+      "Similarity column 30911 ( 100 % ), 1734.73 column/sec, elapsed time 0.30 min\n",
       "Evaluated user 0 of 30911\n",
       "Evaluated user 10000 of 30911\n",
       "Evaluated user 20000 of 30911\n",
       "Evaluated user 30000 of 30911\n",
-      "Recommender performance is: Precision = 0.0119, Recall = 0.0143, MAP = 0.0111\n",
-      "UserBasedCF created!\n",
-      "Similarity column 30911 ( 100 % ), 1828.83 column/sec, elapsed time 0.28 min\n",
-      "Evaluated user 0 of 30911\n",
-      "Evaluated user 10000 of 30911\n",
-      "Evaluated user 20000 of 30911\n",
-      "Evaluated user 30000 of 30911\n",
-      "Recommender performance is: Precision = 0.0116, Recall = 0.0110, MAP = 0.0090\n",
-      "UserBasedCF created!\n",
-      "Similarity column 30911 ( 100 % ), 1716.19 column/sec, elapsed time 0.30 min\n",
-      "Evaluated user 0 of 30911\n",
-      "Evaluated user 10000 of 30911\n",
-      "Evaluated user 20000 of 30911\n",
-      "Evaluated user 30000 of 30911\n",
-      "Recommender performance is: Precision = 0.0112, Recall = 0.0105, MAP = 0.0087\n",
-      "UserBasedCF created!\n",
-      "Similarity column 30911 ( 100 % ), 1700.86 column/sec, elapsed time 0.30 min\n",
-      "Evaluated user 0 of 30911\n",
-      "Evaluated user 10000 of 30911\n",
-      "Evaluated user 20000 of 30911\n",
-      "Evaluated user 30000 of 30911\n",
-      "Recommender performance is: Precision = 0.0109, Recall = 0.0104, MAP = 0.0084\n",
-      "UserBasedCF created!\n",
-      "Similarity column 30911 ( 100 % ), 1721.30 column/sec, elapsed time 0.30 min\n",
-      "Evaluated user 0 of 30911\n",
-      "Evaluated user 10000 of 30911\n",
-      "Evaluated user 20000 of 30911\n",
-      "Evaluated user 30000 of 30911\n",
-      "Recommender performance is: Precision = 0.0107, Recall = 0.0103, MAP = 0.0083\n"
+      "Recommender performance is: Precision = 0.0091, Recall = 0.0171, MAP = 0.0114\n"
      ]
     }
    ],
@@ -334,7 +285,7 @@
     "#for user_id in range(0, URM_all.shape[0]):\n",
     "#    array.append(ub_recommender.recommend(user_id, at=10))\n",
     "\n",
-    "x_tick = [3, 5, 7, 10]\n",
+    "x_tick = [5]\n",
     "MAP_per_k = []\n",
     "\n",
     "for topK in x_tick:\n",
@@ -356,52 +307,17 @@
      "output_type": "stream",
      "text": [
       "UserBasedCF created!\n",
-      "Similarity column 30911 ( 100 % ), 1969.86 column/sec, elapsed time 0.26 min\n",
+      "Similarity column 30911 ( 100 % ), 1491.77 column/sec, elapsed time 0.35 min\n",
       "Evaluated user 0 of 30911\n",
       "Evaluated user 10000 of 30911\n",
       "Evaluated user 20000 of 30911\n",
       "Evaluated user 30000 of 30911\n",
-      "Recommender performance is: Precision = 0.0007, Recall = 0.0007, MAP = 0.0003\n",
-      "UserBasedCF created!\n",
-      "Similarity column 30911 ( 100 % ), 1680.56 column/sec, elapsed time 0.31 min\n",
-      "Evaluated user 0 of 30911\n",
-      "Evaluated user 10000 of 30911\n",
-      "Evaluated user 20000 of 30911\n",
-      "Evaluated user 30000 of 30911\n",
-      "Recommender performance is: Precision = 0.0080, Recall = 0.0096, MAP = 0.0069\n",
-      "UserBasedCF created!\n",
-      "Similarity column 30911 ( 100 % ), 1562.42 column/sec, elapsed time 0.33 min\n",
-      "Evaluated user 0 of 30911\n",
-      "Evaluated user 10000 of 30911\n",
-      "Evaluated user 20000 of 30911\n",
-      "Evaluated user 30000 of 30911\n",
-      "Recommender performance is: Precision = 0.0197, Recall = 0.0245, MAP = 0.0198\n",
-      "UserBasedCF created!\n",
-      "Similarity column 30911 ( 100 % ), 1794.55 column/sec, elapsed time 0.29 min\n",
-      "Evaluated user 0 of 30911\n",
-      "Evaluated user 10000 of 30911\n",
-      "Evaluated user 20000 of 30911\n",
-      "Evaluated user 30000 of 30911\n",
-      "Recommender performance is: Precision = 0.0272, Recall = 0.0345, MAP = 0.0275\n",
-      "UserBasedCF created!\n",
-      "Similarity column 30911 ( 100 % ), 1724.63 column/sec, elapsed time 0.30 min\n",
-      "Evaluated user 0 of 30911\n",
-      "Evaluated user 10000 of 30911\n",
-      "Evaluated user 20000 of 30911\n",
-      "Evaluated user 30000 of 30911\n",
-      "Recommender performance is: Precision = 0.0336, Recall = 0.0430, MAP = 0.0340\n",
-      "UserBasedCF created!\n",
-      "Similarity column 30911 ( 100 % ), 1605.22 column/sec, elapsed time 0.32 min\n",
-      "Evaluated user 0 of 30911\n",
-      "Evaluated user 10000 of 30911\n",
-      "Evaluated user 20000 of 30911\n",
-      "Evaluated user 30000 of 30911\n",
-      "Recommender performance is: Precision = 0.0390, Recall = 0.0486, MAP = 0.0387\n"
+      "Recommender performance is: Precision = 0.0313, Recall = 0.0517, MAP = 0.0374\n"
      ]
     }
    ],
    "source": [
-    "x_tick = [500, 600]\n",
+    "x_tick = [600]\n",
     "MAP_per_shrinkage = []\n",
     "\n",
     "for shrinkage in x_tick:\n",
@@ -415,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -423,27 +339,46 @@
      "output_type": "stream",
      "text": [
       "UserBasedCF created!\n",
-      "Similarity column 30911 ( 100 % ), 1546.10 column/sec, elapsed time 0.33 min\n"
+      "Similarity column 30911 ( 100 % ), 1515.70 column/sec, elapsed time 0.34 min\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "28106"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ub_recommender = UserBasedCollaborativeFiltering(URM_train, topK=10, shrink=500)\n",
+    "ub_recommender = UserBasedCollaborativeFiltering(URM_train, topK=5, shrink=500)\n",
     "ub_recommender.fit()\n",
     "\n",
     "array = []\n",
     "\n",
-    "for user_id in range(0, URM_all.shape[0]):\n",
+    "for user_id in targetList:\n",
     "    array.append(ub_recommender.recommend(user_id, at=10))\n",
     "\n",
+    "len(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "counter = 0\n",
     "\n",
     "file = open(\"./output/file_out.csv\", \"w\")\n",
     "\n",
     "file.write(\"user_id,item_list\\n\")\n",
     "\n",
-    "for user_array in array:\n",
-    "    file.write(f'{counter},')\n",
+    "for user_id in array:\n",
+    "    file.write(f'{targetList[counter]},')\n",
     "    for i in range(0,10):\n",
     "        if i != 9:\n",
     "            file.write(f'{user_array[i]} ')\n",
