--- a/Test.ipynb
+++ b/Test.ipynb
@@ -261,7 +261,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,9 +381,9 @@
     "    file.write(f'{targetList[counter]},')\n",
     "    for i in range(0,10):\n",
     "        if i != 9:\n",
-    "            file.write(f'{user_array[i]} ')\n",
+    "            file.write(f'{user_id[i]} ')\n",
     "        else:\n",
-    "            file.write(f'{user_array[i]}')\n",
+    "            file.write(f'{user_id[i]}')\n",
     "    file.write(\"\\n\")\n",
     "    counter += 1"
    ]
