--- a/Test.ipynb
+++ b/Test.ipynb
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
        "        [0, 0, 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +990,7 @@
        "        [1, 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1015,7 @@
        "        [0, 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
        "        [1, 0, 0, 0, 1]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
        "        [1, 0, 0, 0]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1087,18 +1087,19 @@
        "        [2, 1, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "URM.dot(ICM).todense()"
+    "dot = URM.dot(ICM)\n",
+    "dot.todense()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1108,7 @@
        "array([2, 3, 0, 1], dtype=int64)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1115,6 +1116,67 @@
    "source": [
     "ICM = ICM.tocsr()\n",
     "np.squeeze(np.asarray(ICM[[0, 1, 3],:].sum(axis=0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = []\n",
+    "for i in range(dot.shape[0]):\n",
+    "    order_mask = np.flip(np.argsort(dot[i].toarray().ravel()))\n",
+    "    data.append(order_mask)\n",
+    "\n",
+    "data = sps.csr_matrix(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[1, 0, 3],\n",
+       "        [3, 1, 2],\n",
+       "        [1, 0, 3],\n",
+       "        [0, 1, 3]])"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[:,0:3].todense()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[0.30129612, 0.        , 0.73898797, 0.60259225],\n",
+       "        [0.82574253, 0.33998543, 0.45006575, 0.        ],\n",
+       "        [0.30129612, 0.        , 0.73898797, 0.60259225],\n",
+       "        [0.        , 0.36358585, 0.72196124, 0.58870816]])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_TFIDF = feature_extraction.text.TfidfTransformer().fit_transform(data)\n",
+    "data_TFIDF.todense()"
    ]
   },
   {
