New booster implemented

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,25 +1134,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "matrix([[1, 0, 3],\n",
-       "        [3, 1, 2],\n",
-       "        [1, 0, 3],\n",
-       "        [0, 1, 3]])"
+       "<4x2 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 5 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[:,0:3].todense()"
+    "data[:,:2]"
    ]
   },
   {
