Load model from zip

--- a/DataReaderTest.ipynb
+++ b/DataReaderTest.ipynb
@@ -2,251 +2,217 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Algorithms.Data_manager.Kaggle.KaggleDataReader import KaggleDataReader"
+    "from Algorithms.KNN.ItemKNNCFRecommender import ItemKNNCFRecommender\n",
+    "from Utils.Toolkit import get_data\n",
+    "\n",
+    "train = get_data()['train']\n",
+    "test = get_data()['test']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KaggleReader: Loading original data\n",
-      "------->/Users/mattiarighetti/Developer/PycharmProjects/recsys/Algorithms/Data_manager/Kaggle/dataset_zip/\n",
-      "KaggleData: cleaning temporary files\n",
-      "KaggleData: saving URM\n",
-      "DataReader: Verifying data consistency...\n",
-      "DataReader: Verifying data consistency... Passed!\n",
-      "DataReader: current dataset is: <class 'Algorithms.Data_manager.Kaggle.KaggleDataReader.KaggleDataReader'>\n",
-      "\tNumber of items: 18495\n",
-      "\tNumber of users: 30359\n",
-      "\tNumber of interactions in URM_all: 398636\n",
-      "\tInteraction density: 7.10E-04\n",
-      "\tInteractions per user:\n",
-      "\t\t Min: 0.00E+00\n",
-      "\t\t Avg: 1.31E+01\n",
-      "\t\t Max: 6.77E+02\n",
-      "\tInteractions per item:\n",
-      "\t\t Min: 0.00E+00\n",
-      "\t\t Avg: 2.16E+01\n",
-      "\t\t Max: 8.99E+02\n",
-      "\tGini Index: 0.59\n",
-      "\n"
+      "ItemKNNCFRecommender: URM Detected 6473 (20.94 %) cold users.\n",
+      "ItemKNNCFRecommender: URM Detected 3374 (18.24 %) cold items.\n"
      ]
     }
    ],
    "source": [
-    "data = KaggleDataReader()\n",
-    "data.load_data(False)"
+    "itemCF = ItemKNNCFRecommender(train.copy())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<26375x7 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 26609 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.UCM_region"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<30317x10 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 31579 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.UCM_age"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Utils.Toolkit import get_data"
+    "itemCF.fit(29, 5, similarity='tanimoto')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<30911x8 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 26609 stored elements in Compressed Sparse Row format>"
+       "[6404, 4000, 12713, 6289, 263, 16885, 15307, 17118, 7647, 10227]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_data()['UCM_region'].tocsr()"
+    "itemCF.recommend(0, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<30911x11 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 30317 stored elements in Compressed Sparse Row format>"
+       "<18495x18495 sparse matrix of type '<class 'numpy.float32'>'\n",
+       "\twith 420565 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_data()['UCM_age'].tocsr()"
+    "itemCF.W_sparse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Recommenders.CF.item_cf import ItemBasedCollaborativeFiltering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myItemCF = ItemBasedCollaborativeFiltering(29, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myItemCF.fit(train.copy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6404,  6289, 10227,  5494,  5113,  5700, 17835,  3509,  3601,\n",
+       "        5696])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myItemCF.recommend(0, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<18495x18495 sparse matrix of type '<class 'numpy.float32'>'\n",
+       "\twith 75293 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myItemCF.SM_item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<30911x18495 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 398636 stored elements in COOrdinate format>"
+       "\twith 12177084 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_data()['URM_all']"
+    "WW_sparse = train.dot(itemCF.W_sparse)\n",
+    "WW_sparse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<30359x18495 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 398636 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.get_URM_all()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ICM_subclass': <18495x10 sparse matrix of type '<class 'numpy.float64'>'\n",
-       " \twith 56086 stored elements in Compressed Sparse Row format>}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.get_loaded_ICM_dict()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<18495x2011 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 18495 stored elements in COOrdinate format>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_data()['ICM_subclass']"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'Base'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-fed8e790dd42>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mAlgorithms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mData_manager\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataSplitter_leave_k_out\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDataSplitter_leave_k_out\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdatasplitter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataSplitter_leave_k_out\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Developer/PycharmProjects/recsys/Algorithms/Data_manager/DataSplitter_leave_k_out.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msparse\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mBase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataIO\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDataIO\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mAlgorithms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mData_manager\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataSplitter\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDataSplitter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Base'"
-     ]
-    }
-   ],
-   "source": [
-    "from Algorithms.Data_manager.DataSplitter_leave_k_out import DataSplitter_leave_k_out\n",
-    "\n",
-    "datasplitter = DataSplitter_leave_k_out(data)"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
