--- a/DataReaderTest.ipynb
+++ b/DataReaderTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
      "output_type": "stream",
      "text": [
       "ItemKNNCFRecommender: URM Detected 6473 (20.94 %) cold users.\n",
-      "ItemKNNCFRecommender: URM Detected 3374 (18.24 %) cold items.\n"
+      "ItemKNNCFRecommender: URM Detected 3394 (18.35 %) cold items.\n"
      ]
     }
    ],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[6404, 4000, 12713, 6289, 263, 16885, 15307, 17118, 7647, 10227]"
+       "[3569, 6530, 7310, 724, 6404, 6289, 12713, 10469, 3572, 5518]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,28 +62,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<18495x18495 sparse matrix of type '<class 'numpy.float32'>'\n",
-       "\twith 420565 stored elements in Compressed Sparse Row format>"
+       "array([0.07142857, 0.05882353, 0.02631579, 0.05      , 0.025     ,\n",
+       "       0.03448276, 0.07142857], dtype=float32)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "itemCF.W_sparse"
+    "user = 0\n",
+    "\n",
+    "s = itemCF.W_sparse.indptr[user]\n",
+    "e = itemCF.W_sparse.indptr[user+1]\n",
+    "\n",
+    "itemCF.W_sparse.data[s:e]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,17 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 6404,  6289, 10227,  5494,  5113,  5700, 17835,  3509,  3601,\n",
-       "        5696])"
+       "array([ 3569,  6530,  7310,   724,  6404,  6289, 12713, 10469,  3572,\n",
+       "        5518])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,38 +136,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<18495x18495 sparse matrix of type '<class 'numpy.float32'>'\n",
-       "\twith 75293 stored elements in Compressed Sparse Row format>"
+       "array([0.07142857, 0.05882353, 0.02631579, 0.05      , 0.025     ,\n",
+       "       0.03448276, 0.07142857], dtype=float32)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myItemCF.SM_item"
+    "s1 = itemCF.W_sparse.indptr[user]\n",
+    "e1 = itemCF.W_sparse.indptr[user+1]\n",
+    "\n",
+    "myItemCF.SM_item.data[s1:e1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<30911x18495 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 12177084 stored elements in Compressed Sparse Row format>"
+       "\twith 12150835 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,10 +182,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy.sparse as sps\n",
+    "\n",
+    "m = sps.rand(10, 10, density=0.4, format='csr')\n",
+    "m.data[:] = 1\n",
+    "m.data"
+   ]
   },
   {
    "cell_type": "code",
