Evaluator_new = EvaluatorHoldout
Evaluator_new did some wrong calculations before, fixed now
Evaluator_new and EvaluatorHoldout returns same values for MAP now

--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
     "\n",
     "urm_train = get_data()['train']\n",
     "urm_test = get_data()['test']\n",
-    "icm_subclass = get_data()['ICM_subclass'].tocsr()"
+    "icm_subclass = get_data()['ICM_subclass'].tocsr()\n",
+    "urm_all = get_data()['URM_all']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +29,7 @@
        "\twith 371381 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +50,7 @@
        "\twith 27255 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +71,7 @@
        "\twith 18495 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,43 +81,165 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([    3,    13,    20, ..., 30902, 30903, 30907])"
+       "<30911x18495 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 398636 stored elements in COOrdinate format>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cold_users = np.ediff1d(urm_train.indptr) < 1\n",
-    "cold_users_index = np.arange(urm_train.shape[0])[cold_users]\n",
-    "cold_users_index"
+    "urm_all"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cold users"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total percentage of cold users is 20.94%\n"
+      "There are 3656 users\n"
      ]
     }
    ],
    "source": [
-    "tot_cold_users = len(cold_users_index)/urm_train.shape[0]*100\n",
+    "urm_all = urm_all.tocsr()\n",
+    "\n",
+    "rows = urm_all.indptr\n",
+    "diff = np.ediff1d(rows) > 0\n",
+    "n_cold_u = np.count_nonzero(diff)\n",
+    "print(f'There are {urm_all.shape[0] - n_cold_u} users')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initial cold users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3656"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cold_users = np.ediff1d(urm_all.indptr) < 1\n",
+    "cold_users_index = np.arange(urm_all.shape[0])[cold_users]\n",
+    "len(cold_users_index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Percentage of cold users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total percentage of cold users is 11.83%\n"
+     ]
+    }
+   ],
+   "source": [
+    "tot_cold_users = len(cold_users_index)/urm_all.shape[0] * 100\n",
     "print(\"Total percentage of cold users is {:.2f}%\".format(tot_cold_users))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inducted cold users after leave_one_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2817 (9.11%) users are going to become cold after leave_one_out\n"
+     ]
+    }
+   ],
+   "source": [
+    "u_one_inter = np.ediff1d(urm_all.indptr) == 1\n",
+    "n_u_one_inter = np.count_nonzero(u_one_inter)\n",
+    "print(f'{n_u_one_inter} ({n_u_one_inter/urm_all.shape[0]*100:.2f}%) users are going to become cold after leave_one_out')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Total cold users after leave_one_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 20.94% cold users\n"
+     ]
+    }
+   ],
+   "source": [
+    "tot_cold_users = n_u_one_inter + len(cold_users_index)\n",
+    "print(f'There are {tot_cold_users/urm_all.shape[0]*100:.2f}% cold users')"
    ]
   },
   {
